# bevy_server

./: Cargo.toml  README.md  gen_proto.bat
crates/close_handle/: Cargo.toml
crates/close_handle/src/: lib.rs
crates/consul/: Cargo.toml
crates/consul/src/: lib.rs
crates/dbproxy/: Cargo.toml
crates/dbproxy/src/: db.rs  handle.rs  lib.rs  processor.rs
crates/dbproxy/src/db/: mod.rs
crates/gate_service/: Cargo.toml
crates/gate_service/src/: client_msg_handle.rs  entity_manager.rs  gate_service.rs  hub_msg_handle.rs  lib.rs
crates/health/: Cargo.toml
crates/health/src/: lib.rs
crates/log/: Cargo.toml
crates/log/src/: lib.rs
crates/mongo/: Cargo.toml
crates/mongo/src/: lib.rs
crates/net/: Cargo.toml
crates/net/src/: lib.rs
crates/net_pack/: Cargo.toml
crates/net_pack/src/: lib.rs
crates/processor/: Cargo.toml
crates/processor/src/: lib.rs
crates/proto/: gen_proto.bat
crates/proto/proto/: client.thrift  common.thrift  gate.thrift  hub.thrift
crates/proto/src/: client.rs  common.rs  dbproxy.rs  gate.rs  hub.rs  lib.rs
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs
crates/tcp/: Cargo.toml
crates/tcp/src/: connect.rs  lib.rs  server.rs  tcp_connect.rs  tcp_server.rs  tcp_socket.rs
crates/timer/: Cargo.toml
crates/timer/src/: lib.rs
crates/wss/: Cargo.toml
crates/wss/src/: lib.rs  ws_connect.rs  ws_server.rs  ws_socket.rs  wss_connect.rs  wss_server.rs  wss_socket.rs
proto/: common.thrift  dbproxy.thrift  gate.thrift  hub.thrift
src/: dbproxy_main.rs  hub_main.rs
src/proto/: hub.rs
