[package]
name = "bevy_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
thrift = "0.17.0"
serde = "1.0.163"
serde_json = "1.0.96"
tracing = "0.1.37"
tokio = { version = "1.28.2", features = ["full"] }
proto = { path = "crates/proto", version = "0.1.0" }
dbproxy = { path = "crates/dbproxy", version = "0.1.0" }
wss = { path = "crates/wss", version = "0.1.0" }
config = { path = "crates/config", version = "0.1.0" }
log = { path = "crates/log", version = "0.1.0" }

[[bin]]
name="hub"
path="./src/hub_main.rs"

[[bin]]
name="dbproxy"
path="./src/dbproxy_main.rs"