[package]
name = "geese"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
thrift = "0.17.0"
serde = "1.0.163"
serde_json = "1.0.96"
tracing = "0.1.37"
uuid = "1.3.3"
consulrs = "0.1.0"
tokio = { version = "1.28.2", features = ["full"] }
proto = { path = "crates/proto", version = "0.1.0" }
dbproxy = { path = "crates/dbproxy", version = "0.1.0" }
wss = { path = "crates/wss", version = "0.1.0" }
config = { path = "crates/config", version = "0.1.0" }
log = { path = "crates/log", version = "0.1.0" }
health = { path = "crates/health", version = "0.1.0" }
consul = { path = "crates/consul", version = "0.1.0" }
local_ip = { path = "crates/local_ip", version = "0.1.0" }
gate_service = { path = "crates/gate_service", version = "0.1.0" }

[[bin]]
name="hub"
path="./src/hub_main.rs"

[[bin]]
name="dbproxy"
path="./src/dbproxy_main.rs"