[package]
name = "dbproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrift = "0.17.0"
futures = "0.3.28"
mongo = { path = "../mongo", version = "0.1.0" }
proto = { path = "../proto", version = "0.1.0" }
