[package]
name = "dbproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrift = "0.17.0"
futures = "0.3.28"
mongodb = "2.5.0"
tracing = "0.1.37"
mongo = { path = "../mongo", version = "0.1.0" }
proto = { path = "../proto", version = "0.1.0" }
queue = { path = "../queue", version = "0.1.0" }
timer = { path = "../timer", version = "0.1.0" }
log = { path = "../log", version = "0.1.0" }
net_pack = { path = "../net_pack", version = "0.1.0" }
tcp = { path = "../tcp", version = "0.1.0" }
