[package]
name = "gate_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
axum = "0.6.18"
tokio = { version = "1.28.2", features = ["full"] }
net = { path = "../net", version = "0.1.0" }
wss = { path = "../wss", version = "0.1.0" }
tcp = { path = "../tcp", version = "0.1.0" }
proto = { path = "../proto", version = "0.1.0" }
close_handle = { path = "../close_handle", version = "0.1.0" }