[package]
name = "tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tokio = { version = "1.28.2", features = ["full"] }
queue = { path = "../queue", version = "0.1.0" }
net_pack = { path = "../net_pack", version = "0.1.0" }